src/main/zcode/astgen/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'true'", "'false'", "'number'", "'bool'", "'string'", 
                     "'return'", "'var'", "'dynamic'", "'func'", "'for'", 
                     "'until'", "'by'", "'break'", "'continue'", "'if'", 
                     "'else'", "'elif'", "'begin'", "'end'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'not'", "'and'", "'or'", "'<-'", 
                     "'='", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'...'", "'['", "']'", "'('", "')'", "','", "<INVALID>", 
                     "<INVALID>", "'\r'", "'\r\r\n'" ]

    symbolicNames = [ "<INVALID>", "BOOL_LIT", "NUM_LIT", "STR_LIT", "TRUE", 
                      "FALSE", "NUM", "BOOL", "STR", "RETURN", "VAR", "DYNAMIC", 
                      "FUNC", "FOR", "UNTIL", "BY", "BREAK", "CONTINUE", 
                      "IF", "ELSE", "ELIF", "BEGIN", "END", "PLUS", "MINUS", 
                      "MULTIPLY", "DIVIDE", "MODULO", "NOT", "AND", "OR", 
                      "ASSIGN", "EQUAL", "DEQUAL", "NOT_EQUAL", "LESS", 
                      "LESS_EQUAL", "GREATER", "GREATER_EQUAL", "CONCAT", 
                      "LSB", "RSB", "LRB", "RRB", "COMMA", "NEWLINE", "NL1", 
                      "NL2", "NL3", "COMMENT_LINE", "IDENTIFIER", "WS", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_program_tail = 1
    RULE_decl = 2
    RULE_stmt = 3
    RULE_nullable_newline_list = 4
    RULE_nullable_newline_list_tail = 5
    RULE_newline_list = 6
    RULE_newline_list_tail = 7
    RULE_id_single = 8
    RULE_decl_array = 9
    RULE_decl_array_list = 10
    RULE_decl_array_list_tail = 11
    RULE_ass_array = 12
    RULE_ass_array_list = 13
    RULE_ass_array_list_tail = 14
    RULE_arr = 15
    RULE_array_list = 16
    RULE_array_list_tail = 17
    RULE_arr_content = 18
    RULE_expr = 19
    RULE_expr1 = 20
    RULE_expr2 = 21
    RULE_expr3 = 22
    RULE_expr4 = 23
    RULE_expr5 = 24
    RULE_expr6 = 25
    RULE_expr7 = 26
    RULE_index_op = 27
    RULE_expr8 = 28
    RULE_index_expr = 29
    RULE_decl_typ_no_var = 30
    RULE_decl_typ_arr = 31
    RULE_var = 32
    RULE_var_decl = 33
    RULE_param_decl_typ = 34
    RULE_param_decl = 35
    RULE_param_decl_content = 36
    RULE_param_decl_list = 37
    RULE_param_decl_list_tail = 38
    RULE_func_decl = 39
    RULE_body_content = 40
    RULE_body_list = 41
    RULE_body_list_tail = 42
    RULE_block_stmt = 43
    RULE_ret_stmt = 44
    RULE_ret_stmt_tail = 45
    RULE_ass_stmt = 46
    RULE_if_stmt_content = 47
    RULE_if_stmt = 48
    RULE_if_stmt_tail = 49
    RULE_for_stmt = 50
    RULE_break_stmt = 51
    RULE_cont_stmt = 52
    RULE_arg_list = 53
    RULE_arg_list_tail = 54
    RULE_func_call_stmt = 55
    RULE_func_call_expr = 56

    ruleNames =  [ "program", "program_tail", "decl", "stmt", "nullable_newline_list", 
                   "nullable_newline_list_tail", "newline_list", "newline_list_tail", 
                   "id_single", "decl_array", "decl_array_list", "decl_array_list_tail", 
                   "ass_array", "ass_array_list", "ass_array_list_tail", 
                   "arr", "array_list", "array_list_tail", "arr_content", 
                   "expr", "expr1", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "index_op", "expr8", "index_expr", 
                   "decl_typ_no_var", "decl_typ_arr", "var", "var_decl", 
                   "param_decl_typ", "param_decl", "param_decl_content", 
                   "param_decl_list", "param_decl_list_tail", "func_decl", 
                   "body_content", "body_list", "body_list_tail", "block_stmt", 
                   "ret_stmt", "ret_stmt_tail", "ass_stmt", "if_stmt_content", 
                   "if_stmt", "if_stmt_tail", "for_stmt", "break_stmt", 
                   "cont_stmt", "arg_list", "arg_list_tail", "func_call_stmt", 
                   "func_call_expr" ]

    EOF = Token.EOF
    BOOL_LIT=1
    NUM_LIT=2
    STR_LIT=3
    TRUE=4
    FALSE=5
    NUM=6
    BOOL=7
    STR=8
    RETURN=9
    VAR=10
    DYNAMIC=11
    FUNC=12
    FOR=13
    UNTIL=14
    BY=15
    BREAK=16
    CONTINUE=17
    IF=18
    ELSE=19
    ELIF=20
    BEGIN=21
    END=22
    PLUS=23
    MINUS=24
    MULTIPLY=25
    DIVIDE=26
    MODULO=27
    NOT=28
    AND=29
    OR=30
    ASSIGN=31
    EQUAL=32
    DEQUAL=33
    NOT_EQUAL=34
    LESS=35
    LESS_EQUAL=36
    GREATER=37
    GREATER_EQUAL=38
    CONCAT=39
    LSB=40
    RSB=41
    LRB=42
    RRB=43
    COMMA=44
    NEWLINE=45
    NL1=46
    NL2=47
    NL3=48
    COMMENT_LINE=49
    IDENTIFIER=50
    WS=51
    ILLEGAL_ESCAPE=52
    UNCLOSE_STRING=53
    ERROR_CHAR=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nullable_newline_list(self):
            return self.getTypedRuleContext(ZCodeParser.Nullable_newline_listContext,0)


        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def program_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Program_tailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.nullable_newline_list()
            self.state = 115
            self.decl()
            self.state = 116
            self.program_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def program_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Program_tailContext,0)


        def nullable_newline_list(self):
            return self.getTypedRuleContext(ZCodeParser.Nullable_newline_listContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_tail" ):
                return visitor.visitProgram_tail(self)
            else:
                return visitor.visitChildren(self)




    def program_tail(self):

        localctx = ZCodeParser.Program_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_tail)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUM, ZCodeParser.BOOL, ZCodeParser.STR, ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.decl()
                self.state = 119
                self.program_tail()
                pass
            elif token in [ZCodeParser.EOF, ZCodeParser.NEWLINE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.nullable_newline_list()
                self.state = 122
                self.match(ZCodeParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Func_declContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = ZCodeParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUM, ZCodeParser.BOOL, ZCodeParser.STR, ZCodeParser.VAR, ZCodeParser.DYNAMIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.var_decl()
                pass
            elif token in [ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.func_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newline_list(self):
            return self.getTypedRuleContext(ZCodeParser.Newline_listContext,0)


        def func_call_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Func_call_stmtContext,0)


        def cont_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Cont_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Break_stmtContext,0)


        def ret_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Ret_stmtContext,0)


        def ass_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Ass_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Block_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.For_stmtContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Var_declContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = ZCodeParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.RETURN, ZCodeParser.BREAK, ZCodeParser.CONTINUE, ZCodeParser.BEGIN, ZCodeParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 130
                    self.func_call_stmt()
                    pass

                elif la_ == 2:
                    self.state = 131
                    self.cont_stmt()
                    pass

                elif la_ == 3:
                    self.state = 132
                    self.break_stmt()
                    pass

                elif la_ == 4:
                    self.state = 133
                    self.ret_stmt()
                    pass

                elif la_ == 5:
                    self.state = 134
                    self.ass_stmt()
                    pass

                elif la_ == 6:
                    self.state = 135
                    self.block_stmt()
                    pass


                self.state = 138
                self.newline_list()
                pass
            elif token in [ZCodeParser.NUM, ZCodeParser.BOOL, ZCodeParser.STR, ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.FOR, ZCodeParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ZCodeParser.IF]:
                    self.state = 140
                    self.if_stmt()
                    pass
                elif token in [ZCodeParser.FOR]:
                    self.state = 141
                    self.for_stmt()
                    pass
                elif token in [ZCodeParser.NUM, ZCodeParser.BOOL, ZCodeParser.STR, ZCodeParser.VAR, ZCodeParser.DYNAMIC]:
                    self.state = 142
                    self.var_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nullable_newline_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(ZCodeParser.NEWLINE, 0)

        def nullable_newline_list_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Nullable_newline_list_tailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_nullable_newline_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullable_newline_list" ):
                return visitor.visitNullable_newline_list(self)
            else:
                return visitor.visitChildren(self)




    def nullable_newline_list(self):

        localctx = ZCodeParser.Nullable_newline_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nullable_newline_list)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NEWLINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(ZCodeParser.NEWLINE)
                self.state = 148
                self.nullable_newline_list_tail()
                pass
            elif token in [ZCodeParser.EOF, ZCodeParser.NUM, ZCodeParser.BOOL, ZCodeParser.STR, ZCodeParser.RETURN, ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.FUNC, ZCodeParser.FOR, ZCodeParser.BREAK, ZCodeParser.CONTINUE, ZCodeParser.IF, ZCodeParser.ELSE, ZCodeParser.ELIF, ZCodeParser.BEGIN, ZCodeParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nullable_newline_list_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(ZCodeParser.NEWLINE, 0)

        def nullable_newline_list_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Nullable_newline_list_tailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_nullable_newline_list_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullable_newline_list_tail" ):
                return visitor.visitNullable_newline_list_tail(self)
            else:
                return visitor.visitChildren(self)




    def nullable_newline_list_tail(self):

        localctx = ZCodeParser.Nullable_newline_list_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_nullable_newline_list_tail)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NEWLINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(ZCodeParser.NEWLINE)
                self.state = 153
                self.nullable_newline_list_tail()
                pass
            elif token in [ZCodeParser.EOF, ZCodeParser.NUM, ZCodeParser.BOOL, ZCodeParser.STR, ZCodeParser.RETURN, ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.FUNC, ZCodeParser.FOR, ZCodeParser.BREAK, ZCodeParser.CONTINUE, ZCodeParser.IF, ZCodeParser.ELSE, ZCodeParser.ELIF, ZCodeParser.BEGIN, ZCodeParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Newline_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(ZCodeParser.NEWLINE, 0)

        def newline_list_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Newline_list_tailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_newline_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewline_list" ):
                return visitor.visitNewline_list(self)
            else:
                return visitor.visitChildren(self)




    def newline_list(self):

        localctx = ZCodeParser.Newline_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_newline_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(ZCodeParser.NEWLINE)
            self.state = 158
            self.newline_list_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Newline_list_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newline_list(self):
            return self.getTypedRuleContext(ZCodeParser.Newline_listContext,0)


        def newline_list_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Newline_list_tailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_newline_list_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewline_list_tail" ):
                return visitor.visitNewline_list_tail(self)
            else:
                return visitor.visitChildren(self)




    def newline_list_tail(self):

        localctx = ZCodeParser.Newline_list_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_newline_list_tail)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.newline_list()
                self.state = 161
                self.newline_list_tail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_singleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_id_single

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_single" ):
                return visitor.visitId_single(self)
            else:
                return visitor.visitChildren(self)




    def id_single(self):

        localctx = ZCodeParser.Id_singleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_single)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(ZCodeParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_arrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def decl_array_list(self):
            return self.getTypedRuleContext(ZCodeParser.Decl_array_listContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_decl_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_array" ):
                return visitor.visitDecl_array(self)
            else:
                return visitor.visitChildren(self)




    def decl_array(self):

        localctx = ZCodeParser.Decl_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_decl_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 169
            self.match(ZCodeParser.LSB)
            self.state = 170
            self.decl_array_list()
            self.state = 171
            self.match(ZCodeParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_array_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM_LIT(self):
            return self.getToken(ZCodeParser.NUM_LIT, 0)

        def decl_array_list_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Decl_array_list_tailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl_array_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_array_list" ):
                return visitor.visitDecl_array_list(self)
            else:
                return visitor.visitChildren(self)




    def decl_array_list(self):

        localctx = ZCodeParser.Decl_array_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_decl_array_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(ZCodeParser.NUM_LIT)
            self.state = 174
            self.decl_array_list_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_array_list_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def NUM_LIT(self):
            return self.getToken(ZCodeParser.NUM_LIT, 0)

        def decl_array_list_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Decl_array_list_tailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl_array_list_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_array_list_tail" ):
                return visitor.visitDecl_array_list_tail(self)
            else:
                return visitor.visitChildren(self)




    def decl_array_list_tail(self):
